{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 102,
  "lineage": "63cfe792-75c0-d665-d5ab-5014b989f078",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bostion_host",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0732b62d310b80e97",
            "arn": "arn:aws:ec2:ap-south-1:964645281762:instance/i-0eec6144f5a1eed81",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eec6144f5a1eed81",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a2f8f9bbdddb640",
            "private_dns": "ip-192-168-1-140.ap-south-1.compute.internal",
            "private_ip": "192.168.1.140",
            "public_dns": "ec2-13-233-28-108.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.28.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08a8192c62ac92e9c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096a39b14ae0f9bed",
            "tags": {
              "Name": "bostion_host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af983b2db0e4c0c5"
            ]
          },
          "dependencies": [
            "aws_security_group.only_ssh_bostion",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc",
            "tls_private_key.my_key_t3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb6467b60a881234",
            "arn": "arn:aws:ec2:ap-south-1:964645281762:instance/i-0d328f91753b73c36",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d328f91753b73c36",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e568b3ebd19c5482",
            "private_dns": "ip-192-168-2-81.ap-south-1.compute.internal",
            "private_ip": "192.168.2.81",
            "public_dns": "ec2-35-154-2-238.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.2.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f32530266f4dd721",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7f62c31d1670dc4",
            "tags": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0248569346b8d58ae",
              "sg-0d19af0ef77ae60f4"
            ]
          },
          "dependencies": [
            "aws_security_group.mysql_sec_group",
            "aws_security_group.only_ssh_bostion",
            "aws_security_group.only_ssh_sql_bositon",
            "aws_security_group.wp_sec_group",
            "aws_subnet.public_subnet",
            "aws_subnet.pvt_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9c43b5bc2603d9d",
            "arn": "arn:aws:ec2:ap-south-1:964645281762:instance/i-09dc7631e7be44173",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09dc7631e7be44173",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0248d87a8d6134df0",
            "private_dns": "ip-192-168-1-203.ap-south-1.compute.internal",
            "private_ip": "192.168.1.203",
            "public_dns": "ec2-15-206-91-25.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.91.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dfd0e0d1b0be9207",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-089daa697d474a415"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096a39b14ae0f9bed",
            "tags": {
              "Name": "mywebserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089daa697d474a415"
            ]
          },
          "dependencies": [
            "aws_security_group.wp_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:internet-gateway/igw-04778549b8ad705ee",
            "id": "igw-04778549b8ad705ee",
            "owner_id": "964645281762",
            "tags": {
              "Name": "my_gw"
            },
            "vpc_id": "vpc-04bd7536808d1d17e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03d35223791866524",
            "owner_id": "964645281762",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04778549b8ad705ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_route_table"
            },
            "vpc_id": "vpc-04bd7536808d1d17e"
          },
          "dependencies": [
            "aws_internet_gateway.my_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058bb7a6f12f3a0e6",
            "route_table_id": "rtb-03d35223791866524",
            "subnet_id": "subnet-096a39b14ae0f9bed"
          },
          "dependencies": [
            "aws_internet_gateway.my_gw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sec_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:security-group/sg-0d19af0ef77ae60f4",
            "description": "Allow only sql web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d19af0ef77ae60f4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Only web  sql from public subnet",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089daa697d474a415"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Only web ping sql from public subnet",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-089daa697d474a415"
                ],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "mysql_sec",
            "name_prefix": null,
            "owner_id": "964645281762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "only_sql_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd7536808d1d17e"
          },
          "dependencies": [
            "aws_security_group.wp_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "only_ssh_bostion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:security-group/sg-0af983b2db0e4c0c5",
            "description": "Allow ssh bostion inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af983b2db0e4c0c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Only ssh_bastion in public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "only_ssh_bostion",
            "name_prefix": null,
            "owner_id": "964645281762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "only_ssh_bostion"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd7536808d1d17e"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "only_ssh_sql_bositon",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:security-group/sg-0248569346b8d58ae",
            "description": "Allow ssh bostion inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0248569346b8d58ae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Only ssh_sql_bostion in public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af983b2db0e4c0c5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "only_ssh_sql_bostion",
            "name_prefix": null,
            "owner_id": "964645281762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "only_ssh_sql_bostion"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd7536808d1d17e"
          },
          "dependencies": [
            "aws_security_group.only_ssh_bostion",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_sec_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:security-group/sg-089daa697d474a415",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089daa697d474a415",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "wp_sec_group",
            "name_prefix": null,
            "owner_id": "964645281762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp_sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd7536808d1d17e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:subnet/subnet-096a39b14ae0f9bed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-096a39b14ae0f9bed",
            "map_public_ip_on_launch": true,
            "owner_id": "964645281762",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-04bd7536808d1d17e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:subnet/subnet-0f7f62c31d1670dc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0f7f62c31d1670dc4",
            "map_public_ip_on_launch": true,
            "owner_id": "964645281762",
            "tags": {
              "Name": "pvt_subnet"
            },
            "vpc_id": "vpc-04bd7536808d1d17e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:vpc/vpc-04bd7536808d1d17e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08b28d4647189e616",
            "default_route_table_id": "rtb-0c556b3f493f5788a",
            "default_security_group_id": "sg-050bafaa5a706707a",
            "dhcp_options_id": "dopt-7b699110",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04bd7536808d1d17e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c556b3f493f5788a",
            "owner_id": "964645281762",
            "tags": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}